k8s/dev/musicians-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: musicians-service
  name: musicians-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: musicians-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        network/app-network: "true"
        service: musicians-service
    spec:
      containers:
      - args:
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: feelwork/musicians-musicians-service:1.0.0
        name: musicians-container
      restartPolicy: Always
