k8s/dev/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: users-service
  name: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: users-service
  template:
    metadata:
      labels:
        network/app-network: "true"
        service: users-service
    spec:
      containers:
      - args:
        - python
        - manage.py
        - runserver
        - 0.0.0.0:8000
        image: feelwork/musicians-users-service:1.0.5
        name: users-container
      restartPolicy: Always
