k8s/dev/networkpolicy-kong-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kong-external
spec:
  podSelector:
    matchLabels:
      service: kong
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 8000
    - port: 8443
  policyTypes:
  - Ingress
